# pos-be

./: .gitignore  Cargo.toml  README.md
migrations/: 20260115162535_init_schema.sql  20260204000619_stores.sql  20260204150852_table_category.sql  20260205010028_table_brand.sql
src/: app_state.rs  main.rs
src/api/: auth_routes.rs  brand_routes.rs  category_routes.rs  company_routes.rs  mod.rs  roles_routes.rs  stores_routes.rs  users_routes.rs
src/controllers/: auth_controllers.rs  brand_controllers.rs  category_controllers.rs  company_controllers.rs  mod.rs  roles_controllers.rs  store_controller.rs  store_controllers.rs  users_controllers.rs
src/dtos/: auth_dto.rs  brand_dto.rs  category_dto.rs  company_dto.rs  mod.rs  pagination_dto.rs  roles_dto.rs  store_dto.rs
src/middleware/: auth_middleware.rs
src/models/: brand_model.rs  category_model.rs  company_model.rs  mod.rs  roles_model.rs  store_model.rs  user_model.rs
src/repository/: auth_repository.rs  brand_repository.rs  category_repository.rs  company_repository.rs  mod.rs  roles_repository.rs  store_repository.rs  user_repository.rs
src/services/: auth_service.rs  brand_service.rs  category_service.rs  company_service.rs  mod.rs  roles_service.rs  store_service.rs  users_service.rs
src/utils/: api_response.rs  mod.rs  pagination.rs  text_utils.rs  token_utils.rs
